peac_dev/force-app/main/default/objects/Remarketer_Matrix__mdt/Remarketer_Matrix__mdt.object-meta.xml
<CustomObject>
    <description>Matrix that determines to which Location a Contract Asset should be returned.</description>
    <label>Remarketer Matrix</label>
    <pluralLabel>Remarketer Matrix</pluralLabel>
</CustomObject>