peac_dev/force-app/main/default/objects/Remarketer_Matrix__mdt/fields/Equipment_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Subtype__c</fullName>
    <label>Equipment Subtype</label>
    <length>80</length>
    <type>Text</type>
</CustomField>