peac_dev/force-app/main/default/objects/Remarketer_Matrix__mdt/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>