peac_dev/force-app/main/default/objects/Remarketer_Matrix__mdt/fields/Return_Warehouse_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Warehouse_Code__c</fullName>
    <label>Return Warehouse Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>