peac_dev/force-app/main/default/objects/Remarketer_Matrix__mdt/listViews/Remarketers.listView-meta.xml
<ListView>
    <fullName>Remarketers</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Equipment_Subtype__c</columns>
    <columns>State__c</columns>
    <columns>Return_Warehouse_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>Remarketers</label>
</ListView>